<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:layout_margin="3dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/rv_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:layout_margin="3dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/rv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:layout_margin="3dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/rv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/black"
        android:layout_margin="3dp"
        android:textSize="15sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>